--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "5.0.0-beta.32",
+    "@mui/system": "^5.15.5",
     "@tabler/icons-react": "^2.46.0",
+    "clsx": "^2.1.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
