--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@formspree/react": "^2.5.1",
     "@mui/base": "5.0.0-beta.32",
     "@mui/system": "^5.15.5",
     "@tabler/icons-react": "^2.46.0",
